--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ include(CheckFunctionExists)
 include(CheckStructHasMember)
 include(CheckTypeSize)
 check_function_exists("fcntl" HAS_FCNTL)
+check_function_exists("ioctl" HAS_IOCTL)
 check_function_exists("poll" HAS_POLL)
 check_function_exists("getaddrinfo" HAS_GETADDRINFO)
 check_function_exists("getnameinfo" HAS_GETNAMEINFO)
@@ -21,6 +22,9 @@ unset(CMAKE_EXTRA_INCLUDE_FILES)
  
 if(HAS_FCNTL)
     add_definitions(-DHAS_FCNTL=1)
+endif()
+if(HAS_IOCTL)
+    add_definitions(-DHAS_IOCTL=1)
 endif()
 if(HAS_POLL)
     add_definitions(-DHAS_POLL=1)
