--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,10 @@ check_struct_has_member("struct msghdr" "msg_flags" "sys/types.h;sys/socket.h" H
 set(CMAKE_EXTRA_INCLUDE_FILES "sys/types.h" "sys/socket.h")
 check_type_size("socklen_t" HAS_SOCKLEN_T BUILTIN_TYPES_ONLY)
 unset(CMAKE_EXTRA_INCLUDE_FILES)
+set(CMAKE_EXTRA_INCLUDE_FILES "qos2.h")
+check_type_size("QOS_FLOWID" HAS_QOS_FLOWID BUILTIN_TYPES_ONLY)
+check_type_size("PQOS_FLOWID" HAS_PQOS_FLOWID BUILTIN_TYPES_ONLY)
+unset(CMAKE_EXTRA_INCLUDE_FILES)
 if(MSVC)
 	add_definitions(-W3)
 else()
@@ -57,6 +61,12 @@ if(HAS_MSGHDR_FLAGS)
 endif()
 if(HAS_SOCKLEN_T)
     add_definitions(-DHAS_SOCKLEN_T=1)
+endif()
+if(HAS_QOS_FLOWID)
+    add_definitions(-DHAS_QOS_FLOWID=1)
+endif()
+if(HAS_PQOS_FLOWID)
+    add_definitions(-DHAS_PQOS_FLOWID=1)
 endif()
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
